package org.interscity.htc
package core.actor.manager.time

import core.types.Tick
import core.actor.manager.time.protocol.*

import org.apache.pekko.actor.{ActorRef, Props}
import org.htc.protobuf.core.entity.event.control.execution.{RegisterActorEvent, StartSimulationTimeEvent}
import org.interscity.htc.core.enumeration.LocalTimeManagerTypeEnum
import org.interscity.htc.core.enumeration.LocalTimeManagerTypeEnum.OptimisticTimeWindow

import scala.collection.mutable

/**
 * TimeWindow_LTM (Time Window Local Time Manager) - IMPLEMENTAÇÃO FUTURA
 * 
 * Gerenciador especializado para simulação com janelas de tempo otimistas.
 * 
 * Características Planejadas:
 * - Permite simulação otimística dentro de janelas de tempo
 * - Gerencia rollback quando necessário
 * - Proposta de tempo sempre no final da janela atual
 * - Lógica complexa para mensagens que cruzam fronteiras da janela
 * 
 * NOTA: Esta é uma implementação esqueleto para demonstrar a arquitetura.
 * A implementação completa requer algoritmos sofisticados de simulação otimística.
 */
class OptimisticTimeWindowTimeManager(
  override val globalTimeManager: ActorRef,
  override val simulationDuration: Tick,
  override val simulationManager: ActorRef,
  val windowSize: Tick = 100  // Tamanho da janela de tempo
) extends LocalTimeManager(
      globalTimeManager = globalTimeManager,
      simulationDuration = simulationDuration,
      simulationManager = simulationManager,
      actorId = s"OptimisticSimulationTimeManager-${System.nanoTime()}"
    ) {

  override def ltmType: LocalTimeManagerTypeEnum = OptimisticTimeWindow

  // Estado específico do Time Window (placeholder para implementação futura)
  private val registeredActors = mutable.Set[String]()
  private var currentWindowStart: Tick = 0
  private var currentWindowEnd: Tick = 0
  private val rollbackPoints = mutable.Map[Tick, WindowSnapshot]()
  private var optimisticEvents = mutable.Queue[OptimisticEventInfo]()

  case class WindowSnapshot(
    tick: Tick,
    actorStates: Map[String, Any], // Placeholder para estados dos atores
    messageBuffer: List[Any] = List.empty
  )

  case class OptimisticEventInfo(
    eventTime: Tick,
    actorId: String,
    eventData: Any,
    var isCommitted: Boolean = false
  )

  override def onStart(): Unit = {
    super.onStart()
    logInfo(s"TimeWindow_LTM iniciado - Gerenciador de Janelas de Tempo (windowSize: $windowSize)")
    logWarn("ATENÇÃO: TimeWindow_LTM é uma implementação esqueleto para demonstração")
  }

  /**
   * Receive específico para eventos Time Window
   */
  override protected def specificTimeManagementReceive: Receive = {
    case register: RegisterActorEvent => registerActor(register)
    case windowStart: WindowStart => handleWindowStart(windowStart)
    case windowEnd: WindowEnd => handleWindowEnd(windowEnd)
    case optimistic: OptimisticEvent => handleOptimisticEvent(optimistic)
    case _ => logWarn("Evento Time Window não implementado")
  }

  // ==================== IMPLEMENTAÇÃO DOS MÉTODOS ABSTRATOS ====================

  /**
   * Verifica se há eventos agendados na janela atual
   */
  override protected def hasScheduledEvents(): Boolean = {
    // TODO: Implementar lógica real de verificação de eventos na janela
    registeredActors.nonEmpty && currentWindowEnd > currentLocalTime
  }

  /**
   * Verifica se pode avançar até o tempo especificado
   */
  override protected def canAdvanceToTime(targetTime: Tick): Boolean = {
    // TODO: Implementar lógica real considerando janelas e rollbacks
    
    // Por enquanto, implementação simplificada:
    // Pode avançar se o tempo alvo está dentro da janela atual
    targetTime <= currentWindowEnd
  }

  /**
   * Sugere tempo alternativo (sempre o final da janela atual)
   */
  override protected def getAlternativeTime(proposedTime: Tick): Option[Tick] = {
    // Time Window sempre propõe o final de sua janela atual
    if (currentWindowEnd > 0) {
      Some(currentWindowEnd)
    } else {
      Some(currentLocalTime + windowSize)
    }
  }

  /**
   * Executa avanço de tempo específico do Time Window
   */
  override protected def advanceToTime(targetTime: Tick): Unit = {
    logDebug(s"TimeWindow avançando de $currentLocalTime para $targetTime")
    
    // TODO: Implementar lógica real de avanço com janelas
    
    // Por enquanto, implementação placeholder:
    if (targetTime > currentWindowEnd) {
      // Precisaria iniciar nova janela
      startNewWindow(targetTime)
    } else {
      // Avanço dentro da janela atual
      commitEventsUntil(targetTime)
    }
  }

  /**
   * Retorna número de eventos otimísticos pendentes
   */
  override protected def getQueueSize(): Int = {
    optimisticEvents.size
  }

  // ==================== LÓGICA ESPECÍFICA DO TIME WINDOW (PLACEHOLDER) ====================

  /**
   * Registra um ator no sistema Time Window
   */
  private def registerActor(event: RegisterActorEvent): Unit = {
    registeredActors.add(event.actorId)
    logInfo(s"Ator registrado no TimeWindow: ${event.actorId} (Total: ${registeredActors.size})")
    
    // TODO: Configurar estado inicial do ator na janela
  }

  /**
   * Inicia uma nova janela de tempo
   */
  private def startNewWindow(startTime: Tick): Unit = {
    currentWindowStart = startTime
    currentWindowEnd = startTime + windowSize
    
    logInfo(s"Nova janela de tempo iniciada: [$currentWindowStart, $currentWindowEnd)")
    
    // TODO: Implementar:
    // - Salvar snapshot para rollback
    // - Configurar buffer de mensagens
    // - Inicializar estado otimístico
    
    saveRollbackPoint(currentWindowStart)
    
    // Notificar atores sobre nova janela
    // broadcastWindowStart(currentWindowStart, windowSize)
  }

  /**
   * Finaliza janela de tempo atual
   */
  private def handleWindowEnd(windowEnd: WindowEnd): Unit = {
    logInfo(s"Finalizando janela de tempo até ${windowEnd.endTick}")
    
    // TODO: Implementar:
    // - Commit de eventos válidos
    // - Rollback se necessário
    // - Limpeza de estado otimístico
    
    commitEventsUntil(windowEnd.endTick)
  }

  /**
   * Trata início de janela
   */
  private def handleWindowStart(windowStart: WindowStart): Unit = {
    logDebug(s"Recebido WindowStart: ${windowStart.startTick}, tamanho: ${windowStart.windowSize}")
    startNewWindow(windowStart.startTick)
  }

  /**
   * Trata evento otimístico
   */
  private def handleOptimisticEvent(optimistic: OptimisticEvent): Unit = {
    logDebug(s"Evento otimístico no tempo ${optimistic.targetTick}")
    
    // TODO: Implementar lógica de eventos otimísticos
    // - Verificar se evento está dentro da janela
    // - Detectar necessidade de rollback
    // - Gerenciar dependências causais
    
    if (optimistic.rollbackTick.isDefined) {
      logWarn(s"Rollback detectado para o tempo ${optimistic.rollbackTick.get}")
      // performRollback(optimistic.rollbackPoint.get)
    }
  }

  /**
   * Salva ponto de rollback
   */
  private def saveRollbackPoint(tick: Tick): Unit = {
    // TODO: Implementar salvamento real de estado
    val snapshot = WindowSnapshot(
      tick = tick,
      actorStates = Map.empty, // TODO: Capturar estados reais dos atores
      messageBuffer = List.empty
    )
    
    rollbackPoints.put(tick, snapshot)
    logDebug(s"Ponto de rollback salvo para tick $tick")
  }

  /**
   * Commit de eventos até um tempo específico
   */
  private def commitEventsUntil(untilTime: Tick): Unit = {
    val eventsToCommit = optimisticEvents.filter(_.eventTime <= untilTime)
    
    eventsToCommit.foreach { event =>
      event.isCommitted = true
      logDebug(s"Evento commitado: ${event.actorId} no tempo ${event.eventTime}")
    }
    
    // Remover eventos commitados da fila
    optimisticEvents = optimisticEvents.filterNot(_.isCommitted)
    
    logDebug(s"Commitados ${eventsToCommit.size} eventos até o tempo $untilTime")
  }

  /**
   * Executa rollback (placeholder)
   */
  private def performRollback(rollbackTime: Tick): Unit = {
    logWarn(s"PLACEHOLDER: Rollback para o tempo $rollbackTime")
    
    // TODO: Implementar rollback real:
    // - Restaurar estados dos atores
    // - Cancelar eventos otimísticos inválidos
    // - Reenviar mensagens necessárias
    // - Atualizar janela de tempo
    
    rollbackPoints.get(rollbackTime) match {
      case Some(snapshot) =>
        logInfo(s"Restaurando snapshot do tempo ${snapshot.tick}")
        // Restaurar estados...
      case None =>
        logError(s"Snapshot não encontrado para rollback do tempo $rollbackTime")
    }
  }

  // ==================== HOOKS ESPECÍFICOS ====================

  override protected def onSimulationStart(start: StartSimulationTimeEvent): Unit = {
    logInfo(s"TimeWindow simulação iniciada no tempo ${start.startTick}")
    startNewWindow(start.startTick)
  }

  override protected def onSimulationStop(): Unit = {
    logInfo(s"TimeWindow simulação finalizada:")
    logInfo(s"  Tempo final: $currentLocalTime")
    logInfo(s"  Janela atual: [$currentWindowStart, $currentWindowEnd)")
    logInfo(s"  Atores registrados: ${registeredActors.size}")
    logInfo(s"  Eventos otimísticos pendentes: ${optimisticEvents.size}")
    logInfo(s"  Pontos de rollback salvos: ${rollbackPoints.size}")
  }
}

object OptimisticTimeWindowTimeManager {
  def props(
    globalTimeManager: ActorRef,
    simulationDuration: Tick,
    simulationManager: ActorRef,
    windowSize: Tick = 100
  ): Props =
    Props(classOf[OptimisticTimeWindowTimeManager], globalTimeManager, simulationDuration, simulationManager, windowSize)
}
